--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainPage"></activity>
+        <activity android:name=".ChatScreenActivity"></activity>
+        <activity android:name=".MainPage" />
         <activity android:name=".SignIn" />
         <activity android:name=".SignUp" />
         <activity android:name=".MainActivity">
