--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AboutUs"></activity>
+        <activity android:name=".settings.AboutUs"></activity>
         <activity android:name=".ProfilePage" />
-        <activity android:name=".ChatScreenActivity" />
+        <activity android:name=".chat.ChatScreenActivity" />
         <activity android:name=".MainPage" />
-        <activity android:name=".SignIn" />
-        <activity android:name=".SignUp" />
+        <activity android:name=".signinsignup.SignIn" />
+        <activity android:name=".signinsignup.SignUp" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
