--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Games.ChooseWord"></activity>
+        <activity android:name=".Games.WaitSalonChooser"></activity>
+        <activity android:name=".Games.WaitSalon" />
+        <activity android:name=".Games.ChooseWord" />
         <activity android:name=".friends.AddFriend" />
         <activity android:name=".Games.Hangman" />
         <activity android:name=".Games.TicTocToe" />
