--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Games.HangmanOffline"></activity>
+        <activity android:name=".Games.LeaderBoardActivity"></activity>
+        <activity android:name=".Games.HangmanOffline" />
         <activity android:name=".Games.XOOffline" />
         <activity android:name=".Games.WaitSalonChooser" />
         <activity android:name=".Games.WaitSalon" />
